<resources>
    <string name="app_name">MapDemo</string>
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_invalid">Not a valid password</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_link_text">Sign Up Instead</string>

    <!--sign up-->
    <string name="full_name">Full Name</string>
    <string name="full_name_field_hint">Enter your Full Name</string>
    <string name="full_name_field_invalid">Full Name can\'t be empty</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_field_hint">Enter your Confirm Password</string>
    <string name="confirm_password_field_invalid">Confirm Password can\'t be empty</string>
    <string name="confirm_password_same_as_password">Confirm Password should be same as password</string>
    <string name="sign_up_button_text">Sign Up</string>


    <!--menu-->
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="maps_api_key">AIzaSyC2vRg2c_19Ucv3llSO2zhZgx_cgBzjqAU</string>
    <string name="state_badge_label">State badge</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="pmc_building">PMC Building</string>
    <string name="bal_Gandharva">Bal Gandharva Rang Mandir</string>
    <string name="sambhaji_garden">Sambhaji garden</string>
    <string name="junglee_maharaj_mandir">Junglee Maharaj Mandir</string>
    <string name="shaniwar_wada">Shaniwar Wada</string>


    <string name="pmc_building_lat">18.52395080925465</string>
    <string name="pmc_building_long">73.85310318381944</string>

    <string name="bal_Gandharva_lat">18.521979367492083</string>
    <string name="bal_Gandharva_long">73.84870094299748</string>

    <string name="sambhaji_garden_lat">18.520607704814314</string>
    <string name="sambhaji_garden_long">73.8464931126553</string>

    <string name="junglee_maharaj_mandir_lat">18.52680148193318</string>
    <string name="junglee_maharaj_mandir_long">73.85014252913078</string>

    <string name="shaniwar_wada_lat">18.51970304528502</string>
    <string name="shaniwar_wada_long">73.85537194149103</string>


    <string name="logout_button_text">Logout</string>

</resources>