<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_20"
    tools:context="com.tushar.map.ui.dashboard.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_pic"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/full_name" />

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_5"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_pic"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                tools:text="@string/email" />

            <TextView
                android:id="@+id/tv_old_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginStart="@dimen/dimen_10"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_pic"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_email"
                tools:text="@string/full_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60"
        android:text="@string/logout_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>